# blog-news

./: .env.dist  .flake8  .gitignore  .travis.yml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: linter-flake8.yml
app/: celery.py  settings.py  urls.py  utils.py
news/: admin.py  models.py  serializers.py  views.py
news/management/commands/: create_fake_posts.py
news/migrations/: 0001_initial.py  0002_auto_20210414_1438.py  0003_post_image.py  0004_alter_post_image.py  0005_auto_20210414_1542.py  0006_alter_comment_text.py  0007_auto_20210414_1707.py  0008_alter_post_article.py  0009_alter_category_slug.py  0010_alter_post_slug.py  0011_alter_post_article.py  0012_auto_20210420_1037.py  0013_comment_publish.py  0014_rename_for_news_comment_for_post.py
news/templates/: base.html  main_page.html  o_auth.html  test_drf_api.html
