[tool.poetry]
name = "News-blog"
version = "0.1.0"
description = "My pet project"
authors = ["netscro <kovalev_evgeniy@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
flake8 = "^3.9.0"
isort = "^5.8.0"
black = "^20.8b1"
django-extensions = "^3.1.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
